  * New AST node for empty statements (org.eclipse.jdt.internal.compiler.ast.EmptyStatement)
  	i.e. 2 more APIs on the AST visitor.
	Note: this was not an official API
  * ISourceElementRequestor notifies enter/exit initializers instead of just acceptInitializer.
	Note: this was not an official API
  * Search in inner-classes now works. Indexes are recomputed automatically on start-up.
  	
  PRs Fixed in this Release
  ================================================================================
  1GK2A45: ITPJCORE:WIN2000 - JCK 1.4 - possibly assigned variable after assignment expression when true 
  1GK29Q8: ITPJCORE:WIN2000 - JCK 1.4 - possibly assigned value of a final instance variable after a constant boolean expression when false
  1G52F7P: ITPJCORE:WINNT - Search - finds bogus references to class
  1G4TNX1: ITPJCORE:WINNT - Search - No search anonymous results in inner classes
  1GHW0AZ: ITPJCORE:WINNT - JCK 1.4 - unreachable empty statements
  1GK2BLM: ITPJCORE:WIN2000 - JCK 1.4 - definitely assigned value after the boolean operator ? : when true 
  1GKB28A: ITPJCORE:WIN2000 - Compiler accepts incorrect code
  1FL4T1Q: LFCOM:WINNT - JCK 1.4 - VerifyError due to an illegal jump
  1GK2B6D: ITPJCORE:WIN2000 - JCK 1.4 - definitely assigned value before the second operand of the boolean operator &&
  1GK2AOF: ITPJCORE:WIN2000 - JCK 1.4 - assigned variable before finally block after return statement 
  1GK6WD3: ITPJCORE:WIN2000 - search:no fully qualified references are found
  1GK7231: ITPJCORE:WIN2000 - typos in comments
  1GK77HA: ITPJCORE:WINNT - Search - missing base type references
  1GJY2XN: ITPJUI:WIN2000 - rename type: error when with reference
  1GK1I2J: ITPJCORE:WIN2000 - Broken SourceEnd in ForStatement and WhileStatement
  1GK1HWY: ITPJCORE:WIN2000 - Broken sourceEnd in for Assignment and CompoundAssignment
  1GIIBC3: ITPJCORE:WINNT - search for method references - missing matches